 * Added a string_display() function to prevent HTML tags from screwing up display
 * Added version editing capability
 * Added account preferences
 * Added changed in last X hours option
 * Added show source debug capability - requires PHP4
 * Added 'feedback' status - indicates that it requires more information
 * Added show Mantis version capability
 * Fixed bug with Bugnote Add button showing up in the wrong places
 * Fixed bug with SQL queries updating both submitted and last updated dates on bugs
 * Fixed bug with SQL queries updating both submitted and last access dates on users
 * Modified version to be an enum.
 * Modified ordering methods in manage account
 * Modified viewing preferences
 * Made enum displays (category, status, etc) easier to maintain via print_lists()
 * Renamed access_level_check_greater() to access_level_check_greater_or_equal()
 * Renamed $g_bug_view_all_page $g_bug_view_all_page $g_bug_view_all_page
   to      $g_view_bug_all_page $g_view_bug_page $g_view_bug_advanced_page
 * Renamed corresponding .php3 files
 * Refined view next/prev bugs and news items
 * Split manage user actions into separate files
 * Removed the destructive DROP table in db_generate.sql
 * Removed view_prefs_page.php3 and view_prefs_update.php3 and corresponding
   cookie variables

12.06.2000	-	0.10.2

 * Fixed Reporter Field on update page
 * Fixed variable error preventing Bugnote addition
 * Fixed minor viewing bugs related to \ characters
 * Added documentation section
 * Summary is now useful
 * Fixed a few issues with the Advanced bug view
 * Tidied up most of the code
 * Temporarily 'solved' (mostly) a serious issue with consistency on
   bugnote and bug report additions

12.03.2000	-	0.10.1

 * Fixed some category bugs

12.03.2000	-	0.10.0

 * Moved constant config settings to config_inc.php3
 * Better news formatting
 * Added protected flag for accounts
 * Color values controlled by variables
 * Page variables controlled by variables