@@ -43,7 +43,7 @@
 		$row = mysql_fetch_array($result);
 		extract( $row, EXTR_PREFIX_ALL, "v" );
 		$v_headline = string_display( $v_headline );
-		$v_body = string_display( $v_body );
+		$v_body = string_display_with_br( $v_body );
 		$v_date_posted = date( "m-d H:i", sql_to_unix_time( $v_date_posted ) );
 
 		## grab the username and email of the poster
