@@ -65,9 +65,9 @@
 	extract( $row, EXTR_PREFIX_ALL, "v2" );
 
 	$v_summary = string_display( $v_summary );
-	$v2_description = string_display( $v2_description );
-	$v2_steps_to_reproduce = string_display( $v2_steps_to_reproduce );
-	$v2_additional_information = string_display( $v2_additional_information );
+	$v2_description = string_display_with_br( $v2_description );
+	$v2_steps_to_reproduce = string_display_with_br( $v2_steps_to_reproduce );
+	$v2_additional_information = string_display_with_br( $v2_additional_information );
 	$v_date_submitted = date( "m-d H:i", $v_date_submitted );
 	$v_last_updated = date( "m-d H:i", $v_last_updated );
 ?>
@@ -329,7 +329,6 @@
 		<td valign="top" bgcolor=<? echo $g_white_color ?> colspan=2>
 			<input type=submit value=" Delete Bug ">
 		</td>
-
 	</form>
 	</tr>
 <?
@@ -342,7 +341,12 @@
 
 <p>
 <?
+	include( $g_bugnote_include_file );
+	PRINT "<p>";
+
 	if ( $v_status=="resolved" ) {
+		include( $g_bugnote_include_file );
+		PRINT "<p>";
 		PRINT "<div align=center>";
 		PRINT "<form method=post action=\"$g_bug_reopen\">";
 			PRINT "<input type=hidden name=f_id value=\"$v_id\">";
@@ -350,9 +354,6 @@
 		PRINT "</form>";
 		PRINT "</div>";
 	} else {
-		PRINT "<p>";
-		include( $g_bugnote_include_file );
-		PRINT "<p>";
 		include( $g_bugnote_add_include_file );
 	}
 ?>
