@@ -65,9 +65,9 @@
 	extract( $row, EXTR_PREFIX_ALL, "v2" );
 
 	$v_summary = string_display( $v_summary );
-	$v2_description = string_display( $v2_description );
-	$v2_steps_to_reproduce = string_display( $v2_steps_to_reproduce );
-	$v2_additional_information = string_display( $v2_additional_information );
+	$v2_description = string_display_with_br( $v2_description );
+	$v2_steps_to_reproduce = string_display_with_br( $v2_steps_to_reproduce );
+	$v2_additional_information = string_display_with_br( $v2_additional_information );
 	$v_date_submitted = date( "m-d H:i", sql_to_unix_time( $v_date_submitted ) );
 	$v_last_updated = date( "m-d H:i", sql_to_unix_time( $v_last_updated ) );
 ?>
@@ -255,6 +255,9 @@
 
 <p>
 <?
+	include( $g_bugnote_include_file );
+	PRINT "<p>";
+
 	if ( $v_status=="resolved" ) {
 		PRINT "<div align=center>";
 		PRINT "<form method=post action=\"$g_bug_reopen\">";
@@ -263,9 +266,6 @@
 		PRINT "</form>";
 		PRINT "</div>";
 	} else {
-		PRINT "<p>";
-		include( $g_bugnote_include_file );
-		PRINT "<p>";
 		include( $g_bugnote_add_include_file );
 	}
 ?>
